--- a/Group Comparison.ipynb
+++ b/Group Comparison.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "abe420bf",
    "metadata": {},
    "outputs": [],
@@ -64,12 +64,12 @@
    "outputs": [],
    "source": [
     "# Use this space for any additional import statements you need\n",
-    "\n"
+    "#import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bcbe6342",
    "metadata": {},
    "outputs": [],
@@ -95,16 +95,37 @@
     "        all_language_emojis.add(em)\n",
     "\n",
     "# and now our functions\n",
-    "def descriptive_stats(tokens, num_tokens = 5, verbose=True) :\n",
+    "def descriptive_stats(tokens, top_tokens = 5, verbose=True) :\n",
     "    \"\"\"\n",
     "        Given a list of tokens, print number of tokens, number of unique tokens, \n",
-    "        number of characters, lexical diversity, and num_tokens most common\n",
-    "        tokens. Return a list of \n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Place your Module 2 solution here\n",
+    "        number of characters, lexical diversity (https://en.wikipedia.org/wiki/Lexical_diversity), \n",
+    "        and num_tokens most common tokens. Return a list with the number of tokens, number\n",
+    "        of unique tokens, lexical diversity, and number of characters. \n",
     "    \n",
-    "    return(0)\n",
+    "    \"\"\"\n",
+    "    # Fill in the correct values here. \n",
+    "    num_tokens = len(tokens)\n",
+    "    num_unique_tokens = len(set(tokens))\n",
+    "    lexical_diversity = num_unique_tokens / num_tokens\n",
+    "    num_characters = sum(len(token) for token in tokens)\n",
+    "\n",
+    "    token_counts = Counter(tokens)\n",
+    "    most_common_tokens = token_counts.most_common(top_tokens)\n",
+    "    \n",
+    "    if verbose :        \n",
+    "        print(f\"There are {num_tokens} tokens in the data.\")\n",
+    "        print(f\"There are {num_unique_tokens} unique tokens in the data.\")\n",
+    "        print(f\"There are {num_characters} characters in the data.\")\n",
+    "        print(f\"The lexical diversity is {lexical_diversity:.3f} in the data.\")\n",
+    "    \n",
+    "        # print the five most common tokens\n",
+    "        print(f\"The five most common tokens in the data:\")\n",
+    "        for token, count in most_common_tokens:\n",
+    "            print(f\"{token}: {count}\")\n",
+    "        \n",
+    "    return([num_tokens, num_unique_tokens,\n",
+    "            lexical_diversity,\n",
+    "            num_characters])\n",
     "\n",
     "\n",
     "    \n",
@@ -118,6 +139,7 @@
     "\n",
     "def remove_stop(tokens) :\n",
     "    # modify this function to remove stopwords\n",
+    "    tokens = [word for word in tokens if word not in stopwords]\n",
     "    return(tokens)\n",
     " \n",
     "def remove_punctuation(text, punct_set=tw_punct) : \n",
@@ -128,6 +150,7 @@
     "        function will drop tokens like '#hashtag' or '2A', which we need for Twitter. \"\"\"\n",
     "    \n",
     "    # modify this function to return tokens\n",
+    "    tokens = text.split()\n",
     "    return(text)\n",
     "\n",
     "def prepare(text, pipeline) : \n",
@@ -136,7 +159,7 @@
     "    for transform in pipeline : \n",
     "        tokens = transform(tokens)\n",
     "        \n",
-    "    return(tokens)\n"
+    "    return(tokens)"
    ]
   },
   {
@@ -151,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ff88201f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feel fre to use the below cells as an example or read in the data in a way you prefer\n",
     "\n",
-    "data_location = \"\" # change to your location if it is not in the same directory as your notebook\n",
+    "data_location = \"/users/Gonzalo B/Downloads/AppliedTextMining/Module2/Assign 2/M1 Results/\" # change to your location if it is not in the same directory as your notebook\n",
     "twitter_folder = \"twitter/\"\n",
     "lyrics_folder = \"lyrics/\"\n",
     "\n",
@@ -168,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "df415d65",
    "metadata": {},
    "outputs": [],
@@ -182,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "966804cb",
    "metadata": {},
    "outputs": [],
@@ -200,12 +223,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "b5125501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>screen_name</th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>location</th>\n",
+       "      <th>followers_count</th>\n",
+       "      <th>friends_count</th>\n",
+       "      <th>description</th>\n",
+       "      <th>artist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hsmcnp</td>\n",
+       "      <td>Country Girl</td>\n",
+       "      <td>35152213</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1302</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>horrormomy</td>\n",
+       "      <td>Jeny</td>\n",
+       "      <td>742153090850164742</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>81</td>\n",
+       "      <td>514</td>\n",
+       "      <td>𝙿𝚛𝚘𝚞𝚍 𝚜𝚞𝚙𝚙𝚘𝚛𝚝𝚎𝚛 𝚘𝚏 𝚖𝚎𝚜𝚜𝚢 𝚋𝚞𝚗𝚜 &amp; 𝚕𝚎𝚐𝚐𝚒𝚗𝚐𝚜</td>\n",
+       "      <td>cher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>anju79990584</td>\n",
+       "      <td>anju</td>\n",
+       "      <td>1496463006451974150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13</td>\n",
+       "      <td>140</td>\n",
+       "      <td>163㎝／愛かっぷ💜26歳🍒 工〇好きな女の子💓 フォローしてくれたらDMします🧡</td>\n",
+       "      <td>cher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gallionjenna</td>\n",
+       "      <td>J</td>\n",
+       "      <td>3366479914</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>752</td>\n",
+       "      <td>556</td>\n",
+       "      <td>csu</td>\n",
+       "      <td>cher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>bcscomm</td>\n",
+       "      <td>bcscomm</td>\n",
+       "      <td>83915043</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "      <td>888</td>\n",
+       "      <td>2891</td>\n",
+       "      <td>Writer @Washinformer @SpelmanCollege alumna #D...</td>\n",
+       "      <td>cher</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    screen_name          name                   id        location  \\\n",
+       "0        hsmcnp  Country Girl             35152213             NaN   \n",
+       "1    horrormomy          Jeny   742153090850164742           Earth   \n",
+       "2  anju79990584          anju  1496463006451974150             NaN   \n",
+       "3  gallionjenna             J           3366479914             NaN   \n",
+       "4       bcscomm       bcscomm             83915043  Washington, DC   \n",
+       "\n",
+       "   followers_count  friends_count  \\\n",
+       "0             1302           1014   \n",
+       "1               81            514   \n",
+       "2               13            140   \n",
+       "3              752            556   \n",
+       "4              888           2891   \n",
+       "\n",
+       "                                         description artist  \n",
+       "0                                                NaN   cher  \n",
+       "1           𝙿𝚛𝚘𝚞𝚍 𝚜𝚞𝚙𝚙𝚘𝚛𝚝𝚎𝚛 𝚘𝚏 𝚖𝚎𝚜𝚜𝚢 𝚋𝚞𝚗𝚜 & 𝚕𝚎𝚐𝚐𝚒𝚗𝚐𝚜   cher  \n",
+       "2          163㎝／愛かっぷ💜26歳🍒 工〇好きな女の子💓 フォローしてくれたらDMします🧡   cher  \n",
+       "3                                                csu   cher  \n",
+       "4  Writer @Washinformer @SpelmanCollege alumna #D...   cher  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "674767d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in the lyrics here"
+    "# Read in the lyrics data (module 2 code)\n",
+    "lyrics_data = {}\n",
+    "songs_titles = {} # for song titles question\n",
+    "for artist_folder in os.listdir(os.path.join(data_location, lyrics_folder)):\n",
+    "    #\n",
+    "    artist_path=os.path.join(data_location, lyrics_folder,artist_folder)\n",
+    "    #\n",
+    "    lyrics_data[artist_folder] = {}\n",
+    "    song_title_list=[]\n",
+    "    # Get song path and name\n",
+    "    for song_file in os.listdir(artist_path):\n",
+    "        song_path = os.path.join(artist_path, song_file)\n",
+    "        song_name = song_file.split('_', 1)[1].replace('.txt', '')\n",
+    "\n",
+    "        # From each file get the song title and the lyrics\n",
+    "        with open(song_path, 'r', encoding='utf-8') as file:\n",
+    "            lines = file.readlines()\n",
+    "            lyrics = ''.join(lines[4:]).strip()\n",
+    "            song_title = lines[0].strip().strip('\"')\n",
+    "        song_title_list.append(song_title)\n",
+    "        lyrics_data[artist_folder][song_name] = lyrics\n",
+    "    songs_titles[artist_folder] = song_title_list"
    ]
   },
   {
@@ -453,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
